--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
 <p>Hello</p>
 </body>
-<script src="js/scripts.js"></script>
+<!--<script src="js/app.js"></script>-->
+<!--<script src="js/scripts.js"></script>-->
+<script src="js/func.js"></script>
+
 </html>
